Finally fixed the issue where the battle cards stack on top of each other. Now it is fixed and they will be displayed in rows. The container for the cards will wrap around if it reaches the end of the screen.

--- a/battle_rap/styles/battleCard.css
+++ b/battle_rap/styles/battleCard.css
@@ -5,17 +5,24 @@
 } */
 
 .battleCards-container{
+    margin-top: 10%;
     display: flex;
-    justify-content: space-between;
+    /* flex-direction: row; */
+    flex-wrap: wrap;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    justify-content: flex-start;
+    column-gap: 5%;
+    row-gap: 5%;
 }
 
 .card-container{
-    margin-top: 90px;
     border-radius: 10px;
     border: 0.2px #000 solid;
     height: 60%;
     width: 20%;
-    position: absolute;
+    position: relative;
     /* background-image: url(/jesus.png); */
     background-size: cover;
     background-position: center;
@@ -29,14 +36,14 @@
     cursor: pointer;
 }
 
-.img-container{
+/* .img-container{
     height: 100%;
     width: 100%;
     border-radius: 10px;
     object-fit: fill;
-}
+} */
 
-.battle-card-img{
+ .battle-card-img{
     height:100%;
     width: 100%;
     border-radius: 10px;
@@ -60,6 +67,6 @@
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 9px;
+    border-bottom-right-radius: 9px;
 }
